CreditCalculator_Utils